Modified local variables

--- a/assistant.ipynb
+++ b/assistant.ipynb
@@ -1,13 +1,26 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64e0fe01",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "message = \"Hello\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "262faf79caf4a1d5",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-06-23T21:20:24.536746Z",
      "start_time": "2024-06-23T21:20:22.562775Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
     "from dotenv import load_dotenv\n",
     "import os\n",
@@ -27,17 +40,20 @@
     "    api_key=os.getenv(\"OPENAI_API_KEY\"),\n",
     ")\n",
     "\n",
+    "\n",
+    "# MODEL = input(\"Please enter you model: \")\n",
+    "\n",
     "MODEL=\"gpt-4o\"\n",
     "\n",
     "user_messages=[\n",
-    "    {\"role\": \"system\", \"content\": \"You are a helpful assistant help me with my project.\"},\n",
-    "    {\"role\": \"user\",\"content\": \"Can you write a hello world program in python please.\" }\n",
+    "    {\"role\": \"system\", \"content\": \"You are a helpful assistant, help me with my project.\"},\n",
+    "    {\"role\": \"user\",\"content\": f\"{message}\" }\n",
     "]\n",
     "\n",
-    "convo_hist = [user_messages[1][\"content\"]]\n",
+    "convo_hist = [\"[+] USER: \\n\" + user_messages[1][\"content\"]]\n",
     "filename=\"convo_hist.md\"\n",
     "\n",
-    "assistant = client.chat.completions.create(    \n",
+    "assistant = client.chat.completions.create(\n",
     "    model=MODEL,\n",
     "    messages=user_messages\n",
     ")\n",
@@ -45,26 +61,23 @@
     "response = assistant.choices[0].message.content\n",
     "\n",
     "# Extract the assistant's reply from the response\n",
-    "# print(display(Markdown(response)))\n",
+    "print(display(Markdown(response)))\n",
     "\n",
-    "convo_hist.append(response)\n",
+    "convo_hist.append(\"[+] ASSISTANT: \\n\" + response)\n",
     "\n",
     "if os.path.exists(filename):\n",
     "    convo_hist_md(filename, convo_hist, mode='a')\n",
     "else:\n",
     "    convo_hist_md(filename, convo_hist, mode='w')"
-   ],
-   "id": "262faf79caf4a1d5",
-   "outputs": [],
-   "execution_count": 65
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
-   "source": "",
-   "id": "f750f41b21c80bcb"
+   "id": "f750f41b21c80bcb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
